# wirecrab

./: .gitignore  Cargo.toml  README.md  architecture.md
.github/: copilot-instructions.md
src/: flow.rs  gui.rs  lib.rs  loader.rs  logging.rs  main.rs  packet.rs  parser.rs  tui.rs
src/flow/: filter.rs  mod.rs  tests.rs
src/gui/: app.rs  assets.rs  fonts.rs  layout.rs  mod.rs  theme.rs
src/gui/components/: flow_table.rs  histogram.rs  mod.rs  packet_bytes.rs  packet_table.rs  search_bar.rs  settings_menu.rs  toolbar.rs
src/gui/widgets/: flow_table.rs  helpers.rs  mod.rs  packet_table.rs  search_bar.rs  table.rs
src/layers/: ethernet.rs  ip.rs  mod.rs  tls.rs  transport.rs
src/loader/: mod.rs  tests.rs
src/parser/: decoder.rs  dns.rs  mod.rs  packets.rs  reader.rs  state.rs  tcp.rs  tests.rs
src/tui/: app.rs  mod.rs  theme.rs
src/tui/widgets/: mod.rs  packet_table.rs
story/: Cargo.toml
story/src/: lib.rs  main.rs
themes/: flexoki.json
