[package]
name = "wirecrab"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap-parser = "0.17.0"
etherparse = "0.19.0"
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.4.1", optional = true }
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
tui-tree-widget = { version = "0.23.1", optional = true }
anyhow = "1.0"
rust-embed = { version = "8", optional = true }
clap = { version = "4.5.52", features = ["derive"] }

[features]
data = ["pcap-parser/data"]
ui = ["dep:gpui", "dep:gpui-component", "dep:rust-embed"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tui-tree-widget"]
