[workspace]
members = ["story"]

[package]
name = "wirecrab"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap-parser = "0.17.0"
etherparse = "0.19.0"
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.5.0", optional = true }
gpui-component-assets = { version = "0.5.0", optional = true }
gpui-component-macros = { version = "0.5.0", optional = true }
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
tui-tree-widget = { version = "0.23.1", optional = true }
anyhow = "1.0"
clap = { version = "4.5.52", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[features]
data = ["pcap-parser/data"]
ui = ["dep:gpui", "dep:gpui-component", "dep:gpui-component-assets", "dep:gpui-component-macros"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tui-tree-widget"]


[lib]
crate-type = ["rlib"]

[profile.dev]
debug = 0
incremental = false
codegen-units = 1
strip = true

[profile.dev.package."*"]
debug = 0
incremental = false
codegen-units = 1
strip = true
