[workspace]
members = ["story"]

[package]
edition = "2024"
name = "wirecrab"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = {version = "4.5.52", features = ["derive"]}
crossterm = {version = "0.29.0", optional = true}
etherparse = "0.19.0"
gpui = {version = "0.2.2", optional = true}
gpui-component = {version = "0.5.0", optional = true}
gpui-component-assets = {version = "0.5.0", optional = true}
gpui-component-macros = {version = "0.5.0", optional = true}
pcap-parser = "0.17.0"
ratatui = {version = "0.29.0", optional = true}
tls-parser = "0.11"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter"]}
tui-tree-widget = {version = "0.23.1", optional = true}

[features]
data = ["pcap-parser/data"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tui-tree-widget"]
ui = ["dep:gpui", "dep:gpui-component", "dep:gpui-component-assets", "dep:gpui-component-macros"]

[lib]
crate-type = ["rlib"]

[profile.dev]
codegen-units = 1
debug = 0
incremental = false
strip = true

[profile.dev.package."*"]
codegen-units = 1
debug = 0
incremental = false
strip = true
